--- a/views/mongoose.html
+++ b/views/mongoose.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="main.css" />
     <title>두덕쥐</title>
+    <link rel="shortcut icon" href="fav.jpg" />
   </head>
   <body>
     <div class="archeage">
